# rustybrot

./: Cargo.toml
src/: main.rs  mandelbrot.rs  pixel.rs
