[package]
name = "rustybrot"
version = "0.1.0"
authors = ["Andrew Rowson <github@growse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png="0.16.8"
itertools = "0.10.0"
pixels = "0.2.0"
winit = "0.24.0"
winit_input_helper = "0.9.0"
anyhow = "1.0.38"